# TimeCalculation

./: .gitignore  CMakeLists.txt  README.md
UnitTests/: Alarm_test.cpp  CMakeLists.txt  MockAlarm.cpp  MockAlarm.h  MockStopWatch.cpp  MockStopWatch.h  MockTimeBase.cpp  MockTimeBase.h  TimeBase_test.cpp  template-test.cpp
cmake/: export.h
includes/: template-header.h
interfaces/: Alarm.cppm  StopWatch.cppm  TimeBase.cppm  templateModule.cppm
